2002-06-07  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/PyDO/README: made mention of DCOracle2

	* SkunkWeb/sw.conf.in: added warning not to use 
	OracleProcedurePackageLists with DCOracle2

	* pylibs/Oracle/__init__.py,pylibs/PyDO/oracleconn.py: should
	now work with DCOracle2

	* INSTALL: fixed error about building paper docs

	* All of this sections changes are for the fact that you previously
	couldn't put a <:compargs:> tag (or any tag that fiddled with 
	meta-info about the template) in a block tag.

	* pylibs/DT/DTTags.py: 
	    * added documentation for genCode in DTTag.
	    * added meta argument to genCode methods of the for, if, while, 
	      try and spool tags.
	    * made so the above block tags call genCodeChild with the meta
	      argument

	* pylibs/DT/DTCompilerUtil.py(genCodeChild): made all arguments 
	mandatory (see comment about DTC.py), as well as calls genCode on
	Tag instances with the meta argument when they are block (as opposed
	to empty) tags.

	* pylibs/DT/DTC.py(compileTemplate): made all arguments mandatory
	since a) it's always called that way and b) it wouldn't work if you
	didn't anyway.

2002-06-06  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/sample_webdocs/demo/geeknews/dcomps/lwndaily.pydcmp:
	fixed so uses urlopen

	* 3.2.1 cut.

2002-06-06  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/PyDO/operators.py (SET): now works with sets of length 1.

2002-06-06  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/Services/auth/__init__.py: now PlainCookieAuth will set
	conn.remote(User|Password) when having just logged in.  Previously,
	the login method didn't set these as it should have.

2002-06-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/ConfigLoader.py (loadConfig): now exec config files
	in {}, ns rather than ns, ns.

2002-06-05  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>
