@@ -1,3 +1,9 @@
+
+2002-06-10  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* pylibs/PyDO/operators.py (SET.__escape): added some primitive
+	escaping capability to SET; doesn't handle dates.
+
 2002-06-07  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>
 
 	* pylibs/PyDO/README: made mention of DCOracle2
